# AliPhysics

./: .alidisplayrc  .cvsignore  .gitattributes  .gitignore  .rootrc  AddTaskV0ChCorrelationpp.C  AliAnalysisTaskAO2Dconverter.cxx  AliAnalysisTaskCorrForFlowEta.cxx  AliAnalysisTaskHFEMultiplicity.h  AliAnalysisTaskHFEmultTPCEMCAL.cxx  AliAnalysisTaskHFEmultTPCEMCAL.h  AliAnalysisTaskHFEmultTPCTOF.cxx  AliAnalysisTaskHypTritEventTree.cxx  AliAnalysisTaskSEDvsRT.cxx  AliAnalysisTrackingUncertaintiesAOT.cxx  AliAnalysisTrackingUncertaintiesAOT.h  AliCFTaskVertexingHF.cxx  AliCFTaskVertexingHF.h  AliFemtoCutMonitorParticlePIDTPCmomentum.cxx  AliFemtoCutMonitorParticlePIDTPCmomentum.h  AliHFSystErr.h  AliMESppColTask.cxx  AliMESppColTask.h  AliRoot_test.cmake  CMakeCache.txt  CMakeLists.txt  CTestConfig.cmake  CTestCustom.ctest  ChangeLog  Dart.sh  INSTALL.txt  INSTALLDA.txt  Jenkinsfile  LICENSE  Makefile  Makefile.flat  Makefile.old  PWGCFCorrelationsDPhiLinkDef.h  README  README.md  (+7 more)
ACORDE/: .cvsignore  ACORDELinkDef.h  ACORDERaw2Digits_alien.C  ACORDEbaseLinkDef.h  ACORDEda.cxx  ACORDErecLinkDef.h  ACORDEsimLinkDef.h  AcoReco.C  AcordeTestPreprocessor.root  AliACORDE.cxx  AliACORDE.h  AliACORDEAlign.cxx  AliACORDEAlign.h  AliACORDECalibData.cxx  AliACORDECalibData.h  AliACORDECalibModule.cxx  AliACORDECalibModule.h  AliACORDEConstants.cxx  AliACORDEConstants.h  AliACORDEDataDCS.cxx  AliACORDEDataDCS.h  AliACORDEDataModule.cxx  AliACORDEDataModule.h  AliACORDEDigitizer.cxx  AliACORDEDigitizer.h  AliACORDELoader.h  AliACORDEModule.cxx  AliACORDEModule.h  AliACORDEPreprocessor.cxx  AliACORDEPreprocessor.h  AliACORDEQAChecker.cxx  AliACORDEQAChecker.h  AliACORDEQADataMaker.cxx  AliACORDEQADataMaker.h  AliACORDEQADataMakerRec.cxx  AliACORDEQADataMakerRec.h  AliACORDEQADataMakerSim.cxx  AliACORDEQADataMakerSim.h  AliACORDERawData.cxx  AliACORDERawData.h  (+38 more)
AD/: ADbaseLinkDef.h  ADrecLinkDef.h  ADsimLinkDef.h  AliAD.cxx  AliAD.h  AliADBuffer.cxx  AliADCalibData.cxx  AliADCalibData.h  AliADConst.h  AliADDataDCS.cxx  AliADDigitizer.cxx  AliADDigitizer.h  AliADLoader.h  AliADPreprocessor.cxx  AliADPreprocessor.h  AliADQADataMakerRec.cxx  AliADQADataMakerRec.h  AliADQADataMakerSim.cxx  AliADRawStream.cxx  AliADRawStream.h  AliADRecoParam.cxx  AliADRecoParam.h  AliADReconstructor.cxx  AliADReconstructor.h  AliADSDigit.h  AliADTrigger.cxx  AliADTrigger.h  AliADdigit.cxx  AliADdigit.h  AliADhit.cxx  AliADhit.h  AliADv1.cxx  AliADv1.h  CMakeLists.txt  CMakelibADbase.pkg  CMakelibADrec.pkg  CMakelibADsim.pkg  MakeADCDBObjects.C  MakeADZeroMisAlignment.C
ALIROOT/: CMakeLists.txt  CMake_binaliroot.txt  CMakebinaliroot.pkg  Make-depend  Makefile  aliroot.cxx  alivdtwrapper.cxx  binaliroot.pkg  dummies.c  fpu.c  loadmod.F  ludata.F  pydata.F
ANALYSIS/: ANALYSISLinkDef.h  ANALYSISRLLinkDef.h  ANALYSISaliceLinkDef.h  ANALYSIScalibLinkDef.h  AliAOD.cxx  AliAOD.h  AliAODPair.cxx  AliAODPair.h  AliAODPairBaseCut.cxx  AliAODPairBaseCut.h  AliAODPairCut.cxx  AliAODPairCut.h  AliAODParticle.cxx  AliAODParticle.h  AliAODParticleBaseCut.cxx  AliAODParticleBaseCut.h  AliAODParticleCut.cxx  AliAODParticleCut.h  AliAODRun.cxx  AliAODRun.h  AliAODStdParticle.cxx  AliAODStdParticle.h  AliAODevent.cxx  AliAODevent.h  AliAODv0.cxx  AliAODv0.h  AliAODv0KineCuts.cxx  AliAODv0KineCuts.h  AliAODxi.cxx  AliAODxi.h  AliAnalysis.cxx  AliAnalysis.h  AliAnalysisAlien.cxx  AliAnalysisAlien.h  AliAnalysisCuts.cxx  AliAnalysisCuts.h  AliAnalysisDataContainer.cxx  AliAnalysisDataContainer.h  AliAnalysisDataSlot.cxx  AliAnalysisDataSlot.h  (+212 more)
EMCAL/: AliCaloBunchInfo.h  AliCaloCalibPedestal.cxx  AliCaloCalibPedestal.h  AliCaloCalibSignal.cxx  AliCaloCalibSignal.h  AliCaloConstants.h  AliCaloFastAltroFitv0.cxx  AliCaloFitResults.cxx  AliCaloFitResults.h  AliCaloFitSubarray.cxx  AliCaloFitSubarray.h  AliCaloNeuralFit.cxx  AliCaloNeuralFit.h  AliCaloPeakFinderConstants.h  AliCaloPeakFinderVectors.cxx  AliCaloPeakFinderVectors.h  AliCaloRawAnalyzer.cxx  AliCaloRawAnalyzer.h  AliCaloRawAnalyzerComparison.cxx  AliCaloRawAnalyzerComparison.h  AliCaloRawAnalyzerCrude.cxx  AliCaloRawAnalyzerCrude.h  AliCaloRawAnalyzerFactory.cxx  AliCaloRawAnalyzerFakeALTRO.cxx  AliCaloRawAnalyzerFakeALTRO.h  AliCaloRawAnalyzerFastFit.cxx  AliCaloRawAnalyzerFastFit.h  AliCaloRawAnalyzerFitter.cxx  AliCaloRawAnalyzerFitter.h  AliCaloRawAnalyzerKStandard.cxx  AliCaloRawAnalyzerKStandard.h  AliCaloRawAnalyzerLMS.cxx  AliCaloRawAnalyzerLMS.h  AliCaloRawAnalyzerLMSOffline.cxx  AliCaloRawAnalyzerLMSOffline.h  AliCaloRawAnalyzerNN.cxx  AliCaloRawAnalyzerNN.h  AliCaloRawAnalyzerPeakFinder.cxx  AliCaloRawAnalyzerPeakFinder.h  AliCaloRawAnalyzerPeakFinderV2.cxx  (+310 more)
EVE/: CMakeLists.txt  CMake_binalieve.txt  CMake_libEveBase.txt  CMake_libEveDet.txt  CMake_libEveHLT.txt  CMakebinalieve.pkg  CMakebinalihlteve.pkg  CMakelibEveBase.pkg  CMakelibEveDet.pkg  CMakelibEveHLT.pkg  ChangeLog  Makefile  README  README_MUON  binalieve.pkg  binalihlteve.pkg  binreve.pkg  libAlieve.pkg  libEVE.pkg  libEveBase.pkg  libEveDet.pkg  libEveHLT.pkg  libReve.pkg  make_base.inc  reve-genclass.pl
EVGEN/: .rootrc  AliCollisionGeometry.cxx  AliDecayer.cxx  AliDecayer.h  AliDecayerExodus.cxx  AliDecayerExodus.h  AliDecayerPolarized.cxx  AliDecayerPolarized.h  AliDecayerPythia.cxx  AliDecayerPythia.h  AliDimuCombinator.cxx  AliDimuCombinator.h  AliGeVSimParticle.cxx  AliGeVSimParticle.h  AliGenAfterBurnerFlow.cxx  AliGenAfterBurnerFlow.h  AliGenBeamGas.cxx  AliGenBeamGas.h  AliGenBeamGasNew.cxx  AliGenBeamGasNew.h  AliGenBox.cxx  AliGenBox.h  AliGenCocktail.cxx  AliGenCocktail.h  AliGenCocktailAfterBurner.cxx  AliGenCocktailAfterBurner.h  AliGenCocktailEntry.cxx  AliGenCocktailEntry.h  AliGenCocktailEventHeader.cxx  AliGenCocktailEventHeader.h  AliGenCorrHF.cxx  AliGenCorrHF.h  AliGenCosmicsParam.cxx  AliGenCosmicsParam.h  AliGenDeuteron.cxx  AliGenDeuteron.h  AliGenDoubleScan.cxx  AliGenDoubleScan.h  AliGenEMCocktail.cxx  AliGenEMCocktail.h  (+157 more)
FMD/: .cvsignore  .rootrc  AliFMD.cxx  AliFMD.h  AliFMD1.cxx  AliFMD1.h  AliFMD2.cxx  AliFMD2.h  AliFMD3.cxx  AliFMD3.h  AliFMD3Support.cxx  AliFMDAlla.cxx  (+216 more)
(+56274 files in other folders)
